# hola

./: .gitignore  .pre-commit-config.yaml  README.md
cpp/: readme.md  todo
cpp/aaaa/: base_method.md  key_case.md  profile.md  test_base_method.cc
cpp/args/: readme.md
cpp/array/: readme.md
cpp/assign_construct/: readme.md  test_construct.cc  test_construct_err.cc
cpp/clean_code/: cast_style.md
cpp/cmake/: read.md
cpp/cmake/demo/: CMakeLists.txt  fn.cc  fn.h  fn2.cc  fn2.h  main.cc  readme.md
cpp/compiler/: readme.md  source.cc  tmp.h
cpp/const/: test_const.cc
cpp/convert/: readme.md  test.cc  test_single_argue_implict_convert.cc  test_single_argue_implict_convert_err.cc  test_single_argue_implict_convert_err2.cc
cpp/cpp_h/: note.md
cpp/cse/: readme.md
cpp/doc/: static.md
cpp/friend/: readme.md  test_class_share.cc  test_class_share2.cc  test_class_share_compare.cc  test_friend.cc  test_friend_class.cc
cpp/gdb/: readme.md
cpp/inherit/: readme.md  test_inherit_construct.cc  test_inherit_private.cc  test_inherit_static.cc  test_inherit_type.cc
cpp/iterator/: readme.md  test_delete_ptr.cc  test_lfu.cc  test_lru.cc  test_refer_lfu.cc
cpp/lambda/: readme.md  test_base.cc
cpp/lc/: readme.md  test_all_rank.cc
cpp/list/: readme.md
cpp/map/: test_map.cc
cpp/multiple_thread/: test_thread_local.cc
cuda/: compiler.md  hola.cu  kernel.md  nvcc.md  readme.md
pre-commit/: pre-commit-readme.md
proxy/: readme.md
py/: test_rank.py
record/: re.md
shell/: readme.md  test_alias.sh
stack2/: common.md  readme.md  test_stack2.cc
(+80 files in other folders)
